estilos y correciones de carrito

--- a/pages/Contacto.html
+++ b/pages/Contacto.html
@@ -19,6 +19,7 @@
             <a href="Nosotros.html">NOSOTROS</a>
             <a href="Ubicación.html">UBICACIÓN</a>
             <a href="Contacto.html">CONTACTO</a>
+            <a href="Productos.html">PRODUCTOS</a>
         </div>
     </nav>
     <hr>
