--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -16,7 +16,6 @@
         <script src="https://kit.fontawesome.com/8b868c8208.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"> 
     <title>Comprá tu PC</title>
 </head>
@@ -42,128 +41,99 @@
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete1.jpg" alt="">
 
-            <p>*No incluye alimentos.</p>
+            <p>PC Gamer Armada | AMD Ryzen 7 5700X + 16GB (2x8GB) + RTX 3070 8Gb + 500GB NVME</p>
 
-            <p class="precioPaquete">Precio:$ 540</p>
-            <button id="agregar1" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 925000</p>
+            <button id="agregar1" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete2.png" alt="">
 
-            <p>*Servicio Ida y vuelta.</p>
+            <p>PC Gamer Armada | Intel Core I7 10700F + 16GB (2x8GB) + RX 6800 XT 16Gb + 500GB NVME</p>
 
-            <p class="precioPaquete">Precio:$ 220</p>
-            <button id="agregar2" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 814999</p>
+            <button id="agregar2" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete3.jpg" alt="">
 
-            <p>*Solo adulto.</p>
+            <p>PC Gamer Armada | Intel Core I7 10700F + 8GB + RTX 2060 SUPER 8GB</p>
 
-            <p class="precioPaquete">Precio:$ 350</p>
-            <button id="agregar3" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 680000</p>
+            <button id="agregar3" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete4.png" alt="">
 
-            <p>*Servicio Ida o vuelta.</p>
+            <p>PC Gamer Armada | Intel Core I5 10400F + 8GB + RX 6700 10Gb</p>
 
-            <p class="precioPaquete">Precio:$ 125</p>
-            <button id="agregar4" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 525000</p>
+            <button id="agregar4" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete5.jpg" alt="">
 
-            <p>*Paquete individual.</p>
+            <p>PC Gamer Armada | Intel Core I5 10400F + 8GB + GTX 1660 6Gb</p>
 
-            <p class="precioPaquete">Precio:$ 15</p>
-            <button id="agregar5" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 418000</p>
+            <button id="agregar5" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete6.jpg" alt="">
 
-            <p>*Lata de 355 ml.</p>
+            <p>PC Gamer Armada | AMD Ryzen 7 5700G + 16GB (2x8GB) 3200Mhz + Radeon VEGA</p>
 
-            <p class="precioPaquete">Precio:$ 25</p>
-            <button id="agregar6" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 344999</p>
+            <button id="agregar6" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete7.png" alt="">
 
-            <p>*No incluye alimentos.</p>
+            <p>PC Gamer Armada | AMD Ryzen 5 4650G + 8GB (2x4GB) + Radeon VEGA</p>
 
-            <p class="precioPaquete">Precio:$ 450</p>
-            <button id="agregar7" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 241999</p>
+            <button id="agregar7" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete8.png" alt="">
 
-            <p>*No incluye alimentos.</p>
+            <p>PC Hogar/Oficina | Intel Core I5 10400 + 8GB + SSD</p>
 
-            <p class="precioPaquete">Precio:$ 370</p>
-            <button id="agregar8" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$ 229999</p>
+            <button id="agregar8" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
         <div class="paquete">
             <img class="cardimg" src="./img/paquetes/paquete9.png" alt="">
 
-            <p>*No incluye alimentos.</p>
+            <p>PC Hogar/Oficina | Intel Celeron G5905 + 4GB + SSD</p>
 
-            <p class="precioPaquete">Precio:$ 420</p>
-            <button id="agregar9" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
+            <p class="precioPaquete">Precio:$  119999</p>
+            <button id="agregar9" class="botton">Agregar <i class="fas fa-shopping-cart"
                     aria-hidden="true"></i></button>
 
         </div>
-        <div class="paquete">
-            <img class="cardimg" src="./img/paquetes/paquete10.png" alt="">
-
-            <p>*No incluye alimentos.</p>
-
-            <p class="precioPaquete">Precio:$ 510</p>
-            <button id="agregar10" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
-                    aria-hidden="true"></i></button>
-
-        </div>
-        <div class="paquete">
-            <img class="cardimg" src="./img/paquetes/paquete11.png" alt="">
-
-            <p>*Sin alimentos, viaje redondo.</p>
-
-            <p class="precioPaquete">Precio:$ 250</p>
-            <button id="agregar11" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
-                    aria-hidden="true"></i></button>
-
-        </div>
-        <div class="paquete">
-            <img class="cardimg" src="./img/paquetes/paquete12.png" alt="">
-
-            <p>*Sin alimentos, viaje redondo.</p>
-
-            <p class="precioPaquete">Precio:$ 339</p>
-            <button id="agregar12" class="boton-agregar">Agregar <i class="fas fa-shopping-cart"
-                    aria-hidden="true"></i></button>
-
-        </div>
+        
     </main>
-    <div class="modal-contenedor modal-active">
+    <div class="modal-contenedor">
         <div class="modal-carrito">
             <h3>Carrito</h3>
-            <button id="carritoCerrar"><i class="fas fa-times-circle" aria-hidden="true"></i></button>
+            <button id="carritoCerrar"><i class="fa-solid fa-circle-xmark" aria-hidden="true"></i></button>
             <div id="carrito-contenedor">
             </div>
             <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
@@ -201,7 +171,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/app.js"></script>
     <script defer src="../js/modal.js"></script>
-    <script src="../js/stock.json"></script>
 </body>
 
 </html>
