--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 </head>
 
 <body>
-    <div class="containerbarraup">
-        <div class="barraup">  <a href="pages/Productos.html">PRODUCTOS </a> <img src="photos/carrito-de-compras.png" class="carrito" alt="carro"> <img src="photos/acceso.png" class="log" alt="acceso"</div>
-        
+    
     <div class="fotologo"><img src="photos/fotologo.png" alt="fotologo" id="fotologo"></div>
     <nav>
         <div class="menu">
@@ -28,6 +26,7 @@
             <a href="pages/Nosotros.html">NOSOTROS</a>
             <a href="pages/Ubicación.html">UBICACIÓN</a>
             <a href="pages/Contacto.html">CONTACTO</a>
+            <a href="pages/Productos.html"> PRODUCTOS</a>
         </div>
     </nav>
     <hr>
