--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -21,6 +21,7 @@
             <a href="Nosotros.html">NOSOTROS</a>
             <a href="Ubicación.html">UBICACIÓN</a>
             <a href="Contacto.html">CONTACTO</a>
+            <a href="Productos.html">PRODUCTOS</a>
         </div>
     </nav>
     <hr>
