fix imagen centrada

--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -39,7 +39,16 @@
     <hr>
 
     <main id="contenedor-paquetes ">
-        
+        <div class="paquete">
+            <img class="cardimg" src="../photos/1g.jpg" alt="">
+
+            <p>PC Gamer Armada | AMD Ryzen 7 5700X + 16GB (2x8GB) + RTX 3070 8Gb + 500GB NVME</p>
+
+            <p class="precioPaquete">Precio:$ 925000</p>
+            <button id="agregar1" class="botton">Agregar <i class="fas fa-shopping-cart"
+                    aria-hidden="true"></i></button>
+
+        </div>
    </main> 
 
 
