--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -16,7 +16,8 @@
         <script src="https://kit.fontawesome.com/8b868c8208.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"> 
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+        <link rel="stylesheet" href="../estilo/nouislider.min.css"> 
     <title>Comprá tu PC</title>
 </head>
 
@@ -45,6 +46,7 @@
 
     <div class="modal-contenedor">
         <div class="modal-carrito">
+            <div id="slide"></div>
             <h3>Carrito</h3>
             <button id="carritoCerrar"><i class="fa-solid fa-circle-xmark" aria-hidden="true"></i></button>
             <div id="carrito-contenedor">
@@ -84,6 +86,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/app.js"></script>
     <script defer src="../js/modal.js"></script>
+    <script src="../estilo/nouislider.min.js"></script>
 </body>
 
 </html>
