--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -18,6 +18,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
         <link rel="stylesheet" href="../estilo/nouislider.min.css"> 
+        <script src="../js/nouislider.min.js"></script>
     <title>Comprá tu PC</title>
 </head>
 
@@ -86,7 +87,6 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/app.js"></script>
     <script defer src="../js/modal.js"></script>
-    <script src="../estilo/nouislider.min.js"></script>
 </body>
 
 </html>
