--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -46,8 +46,8 @@
 
 
     <div class="modal-contenedor">
+        <div id="slider"></div>
         <div class="modal-carrito">
-            <div id="slide"></div>
             <h3>Carrito</h3>
             <button id="carritoCerrar"><i class="fa-solid fa-circle-xmark" aria-hidden="true"></i></button>
             <div id="carrito-contenedor">
